Fixes several spotbugs issues